Migrate FontAwesome to version 5, according to https://fontawesome.com/how-to-use/on-the-web/setup/upgrading-from-version-4
Refs hitobito/hitobito#826

--- a/app/views/person/mutations/index.html.haml
+++ b/app/views/person/mutations/index.html.haml
@@ -8,7 +8,7 @@
 = form_tag({ format: :csv }, method: :get, class: 'form-inline') do
   = label_tag(:since, t('.since'), class: 'control-label')
   .input-prepend
-    %span.add-on= icon(:calendar)
+    %span.add-on= icon(:'calendar-alt')
     = text_field_tag(:since, params[:since], class: 'span2 date')
 
   = submit_tag(t('.download_csv'), class: 'btn')
