--- a/app/views/people/_details_pro_natura.html.haml
+++ b/app/views/people/_details_pro_natura.html.haml
@@ -3,4 +3,4 @@
 -#  or later. See the COPYING file at the top-level directory or at
 -#  https://github.com/hitobito/hitobito_pro_natura.
 
-= render_attrs(entry, :adress_nummer, :language)
+= render_attrs(entry, :adress_nummer)
